style: Header done and fix some spacing at table

--- a/style.css
+++ b/style.css
@@ -9,9 +9,50 @@ h2, h3{
     padding: 0;
     font-family: 'Roboto', sans-serif;
 }
-#container{
+.header{
+    width: 105vh;
+    margin: auto;
+    padding-top: 20px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.logo-container{
+    max-width: 400px;
+    font-size: 50px;
+}
+.stats-container{
+    width: 350px;
+    height: fit-content;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;    
+    border: 1px solid rgba(179,179,179,0.65);
+    padding: 5px;
+}
+.total-label{
+    font-size: 20px;
+    margin-right: 5px;
+    font-weight: 600;
+}
+.total-label-container{
+    display: flex;
+    font-size: 20px;
+}
+#logo-img{    
+    background: linear-gradient( 145.8deg,  rgba(0,0,0,1) 23.8%, rgba(170,7,7,1) 90.7% );
+    -webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+#main-container{
     display: flex;
     justify-content: center;
+    margin: auto;
+    max-width: 105vh;
+    max-height: 600px;
+    overflow-y: auto;
 }
 thead{
     border-bottom: 2px solid black;
@@ -19,21 +60,41 @@ thead{
     text-align: center;
 }
 td{
-    padding: 7px 0px;
+    padding: 7px 3px;    
     font-size: 15px;
-    min-width: 55px;
+    min-width: 55px;    
     text-align: center;
+    overflow: hidden;
+    white-space: nowrap; 
+    text-overflow: ellipsis;  
+}
+#title-cell{
+    max-width: 500px;
+}
+#author-cell{
+    max-width: 126px;
+}
+#language-cell{
+    max-width: 76px;
 }
 tbody > tr{
     border-bottom: 1px solid gray;
 }
 table{
-    width: 1000px;
+    width: 100%;
+}
+#add-btn-container{
+    padding-top: 10px;
+    width: 105vh;
+    margin: auto;
+    display: flex;
+    justify-content:flex-end;
 }
 #add-button{
-    position: absolute;
-    bottom: 30px;
-    right: 30px;
+    transition: transform 0.25s;
+}
+#add-button:hover{
+    transform: scale(1.1);    
 }
 .edit-button,
 .remove-button{
@@ -41,6 +102,12 @@ table{
     height: 37px;
     font-size: 19px;
     text-shadow: 2px 2px rgba(179,179,179,0.65);
+}
+.edit-button:hover,
+.remove-button:hover,
+.read:hover,
+.not-read:hover{
+    transform: scale(1.05);    
 }
 .edit-button:active,
 .remove-button:active,
